--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-spring.data.mongodb.uri=mongodb+srv://shashank:Cisc0123@cluster0.u4vmu5l.mongodb.net/movie-api-db?authSource=admin
+spring.data.mongodb.uri=mongodb+srv://shashank:<your password>@cluster0.u4vmu5l.mongodb.net/movie-api-db?authSource=admin
